--- a/app.json
+++ b/app.json
@@ -4,10 +4,12 @@
     "slug": "mobile_movie_app",
     "version": "1.0.0",
     "scheme": "mobilemovieapp",
+    "userInterfaceStyle": "automatic",
     "orientation": "portrait", 
+    "icon":"./assets/images/logo.png",
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/logo.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true
@@ -15,14 +17,14 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/logo.png"
     },
     "plugins": [
       "expo-router",
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash-icon.png",
+          "image": "./assets/images/logo.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
